--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,29 +1,33 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto 0 auto;
-    background-color: #5e5b5bad;
-    color: #333333; 
+    background-image: url(../imagens/dia_3d_effect.png);
+    transition: 2.5s;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #333333;
 }
 
-body.modo-escuro{
-    background-color: #212121;
+body.modo-escuro {
+    background-image: url(..//imagens/noite_3d_effect.png);
     color: #f5f5f5;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     padding: 25px;
 }
 
 header .logo,
-header .imagem-botao{
+header .imagem-botao {
     width: 30px;
     transition: 0.2s ease-in-out;
 }
 
-header #botao-alterar-tema{
+header #botao-alterar-tema {
     background: none;
     border: none;
     cursor: none;
@@ -31,24 +35,24 @@ header #botao-alterar-tema{
 
 header .logo:hover,
 header .imagem-botao:hover,
-main .cartao-pokemon:hover{
+main .cartao-pokemon:hover {
     transform: scale(1.05);
     cursor: pointer;
 }
 
-main{
+main {
     padding: 25px;
 }
 
-.listagem-pokemon{
+.listagem-pokemon {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
 }
 
-.cartao-pokemon{
-    background-color: #d8e3ec;
+.cartao-pokemon {
+    background-color: #d8e3ec85;
     width: 200px;
     padding: 15px;
     display: flex;
@@ -59,65 +63,116 @@ main{
     transition: 0.2s ease-in-out;
 }
 
-main .cartao-pokemon:hover{
+main .cartao-pokemon:hover {
     background-color: #96d9d6;
 }
 
-.modo-escuro .cartao-pokemon{
-    background-color: #a8a8a8;
+.modo-escuro .cartao-pokemon:hover {
+    background-color: #09add6;
 }
 
-main .cartao-pokemon .informacoes{
+.modo-escuro .cartao-pokemon {
+    background-color: #a8a8a850;
+}
+
+main .cartao-pokemon .informacoes {
     display: flex;
     justify-content: space-between;
     border: 1px solid #333333;
     border-radius: 10px;
 }
 
-main .cartao-pokemon .informacoes span{
+main .cartao-pokemon .informacoes span {
     padding: 5px;
     text-transform: uppercase;
     font-size: 17px;
 }
 
-main .cartao-pokemon .gif{
+main .cartao-pokemon .gif {
     width: 90px;
     height: 90px;
 }
 
-main .cartao-pokemon .tipos{
+main .cartao-pokemon .tipos {
     display: flex;
     gap: 15px;
 }
 
-main .cartao-pokemon .tipo{
+main .cartao-pokemon .tipo {
     padding: 8px;
     border-radius: 10px;
 }
 
-.grama{
+.grama {
     background-color: #7ac74c;
 }
 
-.veneno{
+.veneno {
     background-color: #df67ddfb;
 }
 
-.fogo{
-   background-color: #ee8130
+.fogo {
+    background-color: #ee8130
 }
 
-.agua{
+.agua {
     background-color: #6390f0;
 }
 
-.inseto{
+.inseto {
     background-color: #51c007
 }
 
-main .descricao{
+main .descricao {
     max-height: 80px;
     overflow-y: scroll;
     font-size: 14px;
     padding-right: 10px;
+}
+
+@media screen and (max-width: 700px) {
+    body {
+        background-image: url(../imagens/dia_3d_effect.png);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: 80cap;
+        background-position: top;
+    }
+
+    body.modo-escuro {
+        background-image: url(../imagens/noite_3d_effect.png);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: 80cap;
+        background-position: top left;
+    }
+
+    .cartao-pokemon {
+        width: 45%;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    main .cartao-pokemon .informacoes span {
+        padding: 5px;
+        text-transform: uppercase;
+        font-size: 0.7rem;
+    }
+
+    main .cartao-pokemon .gif {
+        width: 50%;
+        height: 50%;
+    }
+
+    main .cartao-pokemon .tipos {
+        display: flex;
+        gap: 12%;
+        justify-content: center;
+        font-size: 0.7rem;
+        width: 42%;
+
+    }
+
 }
