--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -16,9 +16,8 @@ body.modo-escuro {
 }
 
 header {
-    
-    position: fixed;
-    top: 0;
+    display: flex;
+    justify-content: space-between;
     padding: 25px;
    
 }
