--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -19,7 +19,6 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 25px;
-   
 }
 
 header .logo,
@@ -28,6 +27,7 @@ header .imagem-botao {
     transition: 0.2s ease-in-out;
     position: fixed;
     top: 0;
+    padding: 25px;
 }
 
 header #botao-alterar-tema {
