--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -140,7 +140,7 @@ main .descricao {
 @media screen and (max-width: 700px) {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
-        background-attachment: fixed;
+        background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
         background-position: top;
@@ -148,7 +148,7 @@ main .descricao {
 
     body.modo-escuro {
         background-image: url(../imagens/noite_3d_effect.png);
-        background-attachment: fixed;
+        background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
         background-position: top left;
