--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -140,9 +140,9 @@ main .descricao {
 @media screen and (max-width: 700px) {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
-        background-attachment: fixed;
+        background-attachment: sticky;
         background-repeat: no-repeat;
-        background-size: 80cap;
+        background-size: 60cap;
         background-position: top;
     }
 
