--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -140,8 +140,8 @@ main .descricao {
 @media screen and (max-width: 700px) {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
-        position: sticky;
-        background-size:80cap;
+        background-position: sticky;
+        background-size: 70%;
         background-position: top;
         background-repeat: no-repeat;
 
