--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -139,16 +139,11 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
-        background-image: sticky url(../imagens/dia_3d_effect.png);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-
-        
-        /*         background-attachment: fixed;
+        background-image: url(../imagens/dia_3d_effect.png);
+        background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: 80cap;
-        background-position: top; */
+        background-position: top;
     }
 
     body.modo-escuro {
