--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -139,7 +139,7 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
-        background-image: url(../imagens/dia_3d_effect.png);
+        background-image: sticky url(../imagens/dia_3d_effect.png);
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: 80cap;
