--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -150,7 +150,7 @@ main .descricao {
         background-image: url(../imagens/noite_3d_effect.png);
         background-attachment: scroll;
         background-repeat: no-repeat;
-        background-size: auto;
+        background-size: inherit;
         background-position: top left;
     }
 
