--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -7,10 +7,11 @@ body {
     max-width: 1280px;
     margin: 0 auto 0 auto;
     background-image: url(../imagens/dia_3d_effect.png);
-    transition: 2.5s;
+    background-attachment: scroll;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    transition: 2.5s;
     color: #333333;
 }
 
