--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -143,7 +143,7 @@ main .descricao {
         background-image: url(../imagens/dia_3d_effect.png);
         background-attachment: scroll;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 0cap;
         background-position: top;
     }
 
@@ -151,7 +151,7 @@ main .descricao {
         background-image: url(../imagens/noite_3d_effect.png);
         background-attachment: scroll;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 0cap;
         background-position: top left;
     }
 
