--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -144,7 +144,7 @@ main .descricao {
         background-attachment: scroll;
         background-repeat: no-repeat;
         background-size: 0cap;
-        background-position: top, right center;
+        background-position: top, bottom center;
     }
 
     body.modo-escuro {
