--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -142,10 +142,8 @@ main .descricao {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
         background-attachment: scroll;
-                background-attachment: fixed;
-
         background-repeat: no-repeat;
-        background-size: 0cap;
+        background-size: inherit initial unset;
         background-position: 60%;
     }
 
