--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,29 +1,27 @@
-html {
-    scroll-behavior: smooth;
-}
-
 body {
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto 0 auto;
     background-image: url(../imagens/dia_3d_effect.png);
-    background-attachment: scroll;
+    transition: 2.5s;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    transition: 2.5s;
+    background-attachment: fixed;
     color: #333333;
 }
 
 body.modo-escuro {
     background-image: url(..//imagens/noite_3d_effect.png);
     color: #f5f5f5;
+    transition: 2.5s;
+
 }
 
 header {
     position: sticky;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     padding: 25px;
@@ -41,11 +39,16 @@ header #botao-alterar-tema {
     cursor: none;
 }
 
-header .logo:hover,
-header .imagem-botao:hover,
 main .cartao-pokemon:hover {
     transform: scale(1.05);
     cursor: pointer;
+}
+
+header .logo:hover,
+header .imagem-botao:hover {
+    transform: scale(1.5);
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 main {
@@ -72,7 +75,9 @@ main {
 }
 
 main .cartao-pokemon:hover {
-    background-color: #96d9d6;
+    /* background-color: #96d9d6; */
+    background-color: #7beee8;
+
 }
 
 .modo-escuro .cartao-pokemon:hover {
@@ -138,20 +143,77 @@ main .descricao {
     padding-right: 10px;
 }
 
+ {
+    
+}
+
+.sites {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 4% 0 4% 8%;
+    width: 33%;
+    background-color: #d8e3ec4d;
+    border-radius: 15px;
+    border: solid #f10808;
+    transition: 0.5s;
+}
+
+.pokebola_aberta {
+    width: 30%;
+    opacity: 75%;
+}
+
+.meus_projetos {
+    text-decoration: none;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(left, #9adbdf 18%, #d4feff 57%, #FFFFFF 46%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    right: 12%;
+    font-size: 14px;
+    padding: 5% 5% 5% 0;
+    transition: 2.5s;
+
+}
+
+.sites:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.modo-escuro .sites {
+    background-color: #a8a8a850;
+
+}
+
+.modo-escuro .meus_projetos {
+    background: -webkit-linear-gradient(#FFFFFF );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    right: 3%;
+    padding: 5% 5% 5% 0;
+    transition: 2.5s;
+}
+
+
 @media screen and (max-width: 700px) {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
-        background-attachment: scroll;
+        background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: initial 50%;
-        background-position: 60%;
+        background-size: 80cap;
+        background-position: top;
     }
 
     body.modo-escuro {
         background-image: url(../imagens/noite_3d_effect.png);
-        background-attachment: scroll;
+        background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: 0cap;
+        background-size: inherit initial unset;
         background-position: top left;
     }
 
