--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -7,7 +7,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: sticky;
     color: #333333;
 }
 
