--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -203,7 +203,7 @@ main .descricao {
 @media screen and (max-width: 700px) {
     body {
         background-image: url(../imagens/dia_3d_effect.png);
-        background-attachment: fixed;
+        background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
         background-position: top;
@@ -211,7 +211,7 @@ main .descricao {
 
     body.modo-escuro {
         background-image: url(../imagens/noite_3d_effect.png);
-        background-attachment: fixed;
+        background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: inherit initial unset;
         background-position: top left;
