--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -198,11 +198,22 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
-        background-image: url(../imagens/dia_3d_effect.png);
+/*         background-image: url(../imagens/dia_3d_effect.png);
         background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
-        background-position: top, left;
+        background-position: top, left; */
+    }
+
+    body::after {
+    content:'';
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background-image: url(../imagens/dia_3d_effect.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
     }
 
     body.modo-escuro {
