--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -198,27 +198,17 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
-/*         background-image: url(../imagens/dia_3d_effect.png);
+        background-image: url(../imagens/dia_3d_effect.png);
         background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
-        background-position: top, left; */
-    }
-
-    body::after {
-    content:'';
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background-image: url(../imagens/dia_3d_effect.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: center;
+        background-position: top, left;
+        position:absolute;
     }
 
     body.modo-escuro {
         background-image: url(../imagens/noite_3d_effect.png);
-        background-attachment: sticky;
+        background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: inherit initial unset;
         background-position: top left;
