--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -210,7 +210,7 @@ main .descricao {
         background-image: url(../imagens/noite_3d_effect.png);
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-size: inherit initial unset;
+        background-size: 80cap;
         background-position: top left;
     }
 
