--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -204,6 +204,8 @@ main .descricao {
         background-size: 80cap;
         background-position: top, left;
         position:absolute;
+        z-index: -1;
+    inset: 0;
     }
 
     body.modo-escuro {
