--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -198,14 +198,12 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
+            max-width: 720px;
         background-image: url(../imagens/dia_3d_effect.png);
         background-attachment: sticky;
         background-repeat: no-repeat;
         background-size: 80cap;
         background-position: top, left;
-        position:absolute;
-        z-index: -1;
-    inset: 0;
     }
 
     body.modo-escuro {
