--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -198,9 +198,8 @@ main .descricao {
 
 @media screen and (max-width: 700px) {
     body {
-            max-width: 720px;
         background-image: url(../imagens/dia_3d_effect.png);
-        background-attachment: sticky;
+        background-attachment: scroll;
         background-repeat: no-repeat;
         background-size: 80cap;
         background-position: top, left;
