--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -207,7 +207,7 @@ main .descricao {
     body {
     overflow-x: hidden;
     background-attachment: scroll;
-    background-size: 80cap;
+    background-size: 100%;
     background-position: center top;
     background-repeat: no-repeat;
         
