--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -210,13 +210,17 @@ main .descricao {
     background-size: contain;
     background-position: center top;
     background-repeat: no-repeat;
+        background-image: none;
+
   }
 
     body::before {
   content: "";
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   width: 100vw;
   height: 100vh;
 background-image: url(../imagens/dia_3d_effect.png);
