--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -207,26 +207,11 @@ main .descricao {
     body {
     overflow-x: hidden;
     background-attachment: scroll;
-    background-size: none;
+    background-size: 100% auto;
     background-position: center top;
     background-repeat: no-repeat;
-        background-image: none;
 
   }
-
-    body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 300vh;
-background-image: url(../imagens/dia_3d_effect.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center top;
-  z-index: -1;
-    }
     
     body.modo-escuro {
         background-image: url(../imagens/noite_3d_effect.png);
